--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ p {
   padding: 0.625rem 1.875rem;
   line-height: 1.5625rem;
   background-color: var(--primary-color);
-  border: 0.1875 solid var(--primary-color);
+  border: 0.1875rem solid var(--primary-color);
   color: var(--white-color);
   font-size: 0.9375rem;
   font-weight: 600;
@@ -133,7 +133,7 @@ p {
   padding: 0.625rem 1.875rem;
   line-height: 1.5625rem;
   background-color: var(--white-color);
-  border: 0.1875 solid var(--white-color);
+  border: 0.1875rem solid var(--white-color);
   color: var(--text-color);
   font-size: 0.9375rem;
   font-weight: 600;
@@ -153,7 +153,7 @@ p {
 .white-btn:hover {
   background-color: transparent;
   color: var(--primary-color);
-  border: var(--primary-color);
+  border-color: var(--primary-color);
 }
 
 .wrapper {
@@ -213,4 +213,28 @@ p {
   padding: 0.3125rem 1.4375rem;
   box-shadow: none;
   margin-left: 0.625rem;
+}
+
+/* Changing Navbar Styling on Scroll  */
+.navigation-wrap.scroll-on {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--white-color);
+  box-shadow: 0 0.125rem 1.75rem 0 rgb(0 0 0 /0.9);
+  transition: all 0.15s ease-in-out 0s;
+}
+
+/* 
+=====================
+  top Banner Section  
+=====================
+*/
+
+.top-banner {
+  width: 100%;
+  background: url(../assets/bg/bg-1.jpg) no-repeat center;
+  background-size: cover;
+  padding: 16.875rem 0 9.375rem;
 }
